# project-2_Borisov_dpo_nod

./: .gitignore  Makefile  README.md  pyproject.toml
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
