[tool.poetry]
name = "project-2_Borisov_dpo_nod"
version = "0.1.0"
description = "Primitive database console application"
authors = ["Ваше Имя <email@example.com>"]
readme = "README.md"

packages = [
    { include = "src" },
]

[tool.poetry.scripts]
project = "src.primitive_db.main:run"
database = "src.primitive_db.main:run"

[tool.poetry.dependencies]
python = "^3.8"
prettytable = "^3.8.0"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Настройки Ruff для линтинга и форматирования
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "venv",
    ".venv", 
    "dist",
    "__pycache__",
    ".git",
    ".github",
    ".DS_Store"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"